2020-05-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (mouse_event_handler): Clear echo area.

2020-05-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (HTML CSS): Remove mention of 
	pre.smalldisplay CSS which isn't output anymore.

2020-05-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi: Revise some index entries and use @subentry.

2020-05-14  Gavin Smith  <gavinsmith0123@gmail.com>

	No title in headings in TOC with '@headings double'.

	* doc/texinfo.tex (\startcontents): Define @thistitle to be 
	empty.

2020-05-14  Gavin Smith  <gavinsmith0123@gmail.com>

	'@setchapternewpage off' headings.

	* doc/texinfo.tex (\CHAPPAGoff): Redefine \HEADINGSon as is done 
	for \CHAPPAGon and \CHAPPAGodd.
	(\HEADINGSsinglechapoff): The new definition.  Chapter pages 
	have the same headings as other pages.

2020-05-13  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove unused macro.

	* doc\texinfo.tex (\pagealignmacro): Remove macro.  It was not 
	used except in \bye.
	(\bye): Use \chappager instead of \pagealignmacro.  Presumably 
	we do not need an extra blank page at the very end of the 
	document if "@setchapternewpage odd" to make sure that we end on 
	an even page.
	(\startcontents): Remove a comment.  The comment credited
	Torbjorn Granlund <tege@matematik.su.se> for the 
	\contentsalignmacro, presumably added 1996-08-03.

2020-05-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi: Remove commented out "@set smallbook".  
	There is no corresponding "@ifset smallbook" anywhere else in 
	the file and apparently has not been for a long time.

2020-05-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi: Remove "start of header" and "end of header" 
	lines.

2020-05-10  Paul Eggert <eggert@cs.ucla.edu>

	* doc/texinfo.tex (\unicodechardefs):
	Add definition for U+02BC APOSTROPHE, MODIFIER LETTER.

2020-05-10  Gavin Smith  <gavinsmith0123@gmail.com>
